# ImGui_Template

./: CMakeLists.txt  CMakeSetting.json  CMakeSettings.json  readme.md  vcpkg.json
ImGuiTemplate/: CMakeLists.txt  ImGuiTemplate.cpp  ImGuiTemplate.h
template/: CMakeLists.txt  ImGui.cpp  ImGui.hpp  ImGuiTemplate.cpp  ImGuiTemplate.h  header.h
template/config/: imgui.ini
